--- a/contact.html
+++ b/contact.html
@@ -18,33 +18,34 @@
 
 <body>
     <!--**********Navigation bar************-->
-
-    <nav class="nav">
-        <div class="container flex">
-            <div class="mobile-flex">
-                <div class="nav__logo">
-                    <a href="#"><img src="img/logo.svg" alt="logo-regenite" class="nav__logo-img"></a>
+    <header class="header">
+        <nav class="nav">
+            <div class="container flex">
+                <div class="mobile-flex">
+                    <div class="nav__logo">
+                        <a href="#"><img src="img/logo.svg" alt="logo-regenite" class="nav__logo-img"></a>
+                    </div>
+                    <div class="nav__hamburger">
+                        <img src="img/hamburger.svg" alt="display menu icon">
+                    </div>
                 </div>
-                <div class="nav__hamburger">
-                    <img src="img/hamburger.svg" alt="display menu icon">
-                </div>
+                <ul class="nav__menu">
+                    <li class="nav__item">
+                        <a href="index.html" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link nav__active">Contact</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="tests.html" class="nav__link">Tests</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="donate.html" class="nav__button white">DONATE</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav__menu">
-                <li class="nav__item">
-                    <a href="index.html" class="nav__link">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#" class="nav__link nav__active">Contact</a>
-                </li>
-                <li class="nav__item">
-                    <a href="tests.html" class="nav__link">Tests</a>
-                </li>
-                <li class="nav__item">
-                    <a href="donate.html" class="nav__button white">DONATE</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!--************Carousel***************-->
     <main>
@@ -118,11 +119,14 @@
                         You can find us on :
                     </p>
                     <ul class="contact__social">
-                        <a href="https://www.facebook.com" class="contact__icon"><img src="img/facebook.svg" alt="facebook icon"></a>
-                        <a href="https://www.instagram.com" class="contact__icon"><img src="img/logo-instagram.svg" alt="instagram icon">
+                        <a href="https://www.facebook.com" class="contact__icon"><img src="img/facebook.svg"
+                                alt="facebook icon"></a>
+                        <a href="https://www.instagram.com" class="contact__icon"><img src="img/logo-instagram.svg"
+                                alt="instagram icon">
                         </a>
-                        <a href="https://www.twitter.com" class="contact__icon"><img src="img/logo-twitter.svg" alt="twitter logo"></a>
-                        
+                        <a href="https://www.twitter.com" class="contact__icon"><img src="img/logo-twitter.svg"
+                                alt="twitter logo"></a>
+
                     </ul>
                 </div>
                 <div class="flex-item">
