--- a/donate.html
+++ b/donate.html
@@ -18,33 +18,34 @@
 
 <body>
     <!--**********Navigation bar************-->
-
-    <nav class="nav">
-        <div class="container flex">
-            <div class="mobile-flex">
-                <div class="nav__logo">
-                    <a href="#"><img src="img/logo.svg" alt="logo-regenite" class="nav__logo-img"></a>
+    <header class="header">
+        <nav class="nav">
+            <div class="container flex">
+                <div class="mobile-flex">
+                    <div class="nav__logo">
+                        <a href="#"><img src="img/logo.svg" alt="logo-regenite" class="nav__logo-img"></a>
+                    </div>
+                    <div class="nav__hamburger">
+                        <img src="img/hamburger.svg" alt="display menu icon">
+                    </div>
                 </div>
-                <div class="nav__hamburger">
-                    <img src="img/hamburger.svg" alt="display menu icon">
-                </div>
+                <ul class="nav__menu">
+                    <li class="nav__item">
+                        <a href="index.html" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="contact.html" class="nav__link">Contact</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="tests.html" class="nav__link">Tests</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="donate.html" class="nav__button white">DONATE</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav__menu">
-                <li class="nav__item">
-                    <a href="index.html" class="nav__link">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="contact.html" class="nav__link">Contact</a>
-                </li>
-                <li class="nav__item">
-                    <a href="tests.html" class="nav__link">Tests</a>
-                </li>
-                <li class="nav__item">
-                    <a href="donate.html" class="nav__button white">DONATE</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
     <!--************Carousel***************-->
     <main>
