--- a/index.html
+++ b/index.html
@@ -207,8 +207,10 @@
             
             <div class="news__indicators">
                 <button type="button" class="news__control news__control--left"></button>
-                <button type="button" class="news__indicator news__indicator--active"></button>
-                <button type="button" class="news__indicator"></button>
+                <div class="news__bubbles">
+                    <button type="button" class="news__indicator news__indicator--active"></button>
+                    <button type="button" class="news__indicator"></button>
+                </div>
                 <button type="button" class="news__control news__control--right"></button>
             </div>
             <div class="container">
