--- a/contact.html
+++ b/contact.html
@@ -110,24 +110,31 @@
 
         <section class="contact padding">
             <div class="container flex">
-                <div class="flex-item">
-                    <h2>Contact</h2>
-                    <hr class="underline">
-                    <p>If you want to talk about our campany or you wish to propose
-                        some idea feel free to send us a message, we'll contact you
-                        as soon as possible.
-                        You can find us on :
-                    </p>
-                    <ul class="contact__social">
-                        <a href="https://www.facebook.com" class="contact__icon"><img src="img/facebook.svg"
-                                alt="facebook icon"></a>
-                        <a href="https://www.instagram.com" class="contact__icon"><img src="img/logo-instagram.svg"
-                                alt="instagram icon">
-                        </a>
-                        <a href="https://www.twitter.com" class="contact__icon"><img src="img/logo-twitter.svg"
-                                alt="twitter logo"></a>
-
-                    </ul>
+                <div class="flex-item contact__text">
+                    
+                    <h2>Keep in touch</h2>
+                    <div class="contact__description">
+                        <p>If you want to talk about our campany or you wish to propose
+                            some idea feel free to send us a message, we'll contact you
+                            as soon as possible.
+                        </p>
+                    </div>
+                   
+                    <div class="contact__adress">
+                        <h3 class="contact__title">Adress</h3>
+                        <p class="contact__grey"><img src="img/location.svg" alt=""> Carrer de sa ma, 07100</p>
+                    </div>
+                    <div class="contact__tlf">
+                        <h3 class="contact__title">Contact info</h3>
+                        <p class="contact__grey"> <img src="img/email.svg" alt=""> regenite@gmail.com</p>
+                        <p class="contact__grey"> <img src="img/phone.svg" alt=""> Tlf: 623134212</p>
+                    </div>
+                    <div class="contact__social">
+                        <h3>Social</h3>
+                        <a class="contact__grey" href="http://www.instagram.com"><img src="img/logo-instagram.svg" alt="">regenite</a>
+                        <a class="contact__grey" href="http://www.facebook.com"><img src="img/facebook.svg" alt="">Regenite_official</a>
+                        <a class="contact__grey" href="http://www.twitter.com"><img src="img/logo-twitter.svg" alt="">regentire_o</a>
+                    </div>
                 </div>
                 <div class="flex-item">
                     <form class="contact__form">
@@ -151,7 +158,7 @@
                         </div>
 
                         <div class="contact__element">
-                            <input type="submit" class="contact__input" value="Send message">
+                            <input type="submit" class="btn btn-primary contact__submit" value="Send message">
                         </div>
                     </form>
                 </div>
