--- a/contact.html
+++ b/contact.html
@@ -119,24 +119,13 @@
                             as soon as possible.
                         </p>
                     </div>
-                   
+                    <h3 class="contact__title"><img src="img/location.svg" alt="">Adress</h3>
                     <div class="contact__adress">
-                        <h3 class="contact__title">Adress</h3>
-                        <p class="contact__grey"><img src="img/location.svg" alt=""> Carrer de sa ma, 07100</p>
-                    </div>
-                    <div class="contact__tlf">
-                        <h3 class="contact__title">Contact info</h3>
-                        <p class="contact__grey"> <img src="img/email.svg" alt=""> regenite@gmail.com</p>
-                        <p class="contact__grey"> <img src="img/phone.svg" alt=""> Tlf: 623134212</p>
-                    </div>
-                    <div class="contact__social">
-                        <h3>Social</h3>
-                        <a class="contact__grey" href="http://www.instagram.com"><img src="img/logo-instagram.svg" alt="">regenite</a>
-                        <a class="contact__grey" href="http://www.facebook.com"><img src="img/facebook.svg" alt="">Regenite_official</a>
-                        <a class="contact__grey" href="http://www.twitter.com"><img src="img/logo-twitter.svg" alt="">regentire_o</a>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1672.1074863669674!2d2.7097106178007397!3d39.76977325865069!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1297e8b978d0bff9%3A0x1d4160c1af5197dd!2sCarrer%20de%20Sa%20Mar%2C%2007100%2C%20Illes%20Balears!5e0!3m2!1ses!2ses!4v1647179132465!5m2!1ses!2ses" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <!--<p class="contact__grey"><img src="img/location.svg" alt=""> Carrer de sa ma, 07100</p>-->
                     </div>
                 </div>
-                <div class="flex-item">
+                <div class="flex-item contact__card">
                     <form class="contact__form">
                         <div class="contact__element flex">
                             <div class="contact__name">
@@ -161,6 +150,12 @@
                             <input type="submit" class="btn btn-primary contact__submit" value="Send message">
                         </div>
                     </form>
+                    <hr class="contact__separator">
+                    <div class="contact__tlf">
+                        <h3 class="contact__title">Contact information</h3>
+                        <p class="contact__grey"> <img src="img/email.svg" alt=""> regenite@gmail.com</p>
+                        <p class="contact__grey"> <img src="img/phone.svg" alt=""> Tlf: 623134212</p>
+                    </div>
                 </div>
             </div>
         </section>
